<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_light"
    tools:context=".VideosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Guidelines -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalConstraint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalConstraint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalConstraint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90"/>

        <!-- Header -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#F4FCD9"
            app:layout_constraintTop_toTopOf="@id/horizontalConstraint1"
            app:layout_constraintStart_toStartOf="@id/verticalConstraint1"
            app:layout_constraintEnd_toStartOf="@id/verticalConstraint2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/video"
                    android:contentDescription="@string/cd_video_header" />

                <TextView
                    android:id="@+id/textWelcomeUser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/videos_header"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/videos_caption"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/verticalConstraint1"
            app:layout_constraintEnd_toStartOf="@id/verticalConstraint2" />

        <!-- Video card helper -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardContent1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="#F4FCD9"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintStart_toStartOf="@id/verticalConstraint1"
            app:layout_constraintEnd_toStartOf="@id/verticalConstraint2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/video_one"
                        android:contentDescription="@string/cd_video_thumb_1"/>

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:src="@drawable/youtube"
                        android:contentDescription="@string/cd_video_play"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/videos_card1_title" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2Content1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="#FFDAB8"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/cardContent1"
            app:layout_constraintStart_toStartOf="@id/verticalConstraint1"
            app:layout_constraintEnd_toStartOf="@id/verticalConstraint2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/video_two"
                        android:contentDescription="@string/cd_video_thumb_2"/>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:src="@drawable/youtube"
                        android:contentDescription="@string/cd_video_play"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/textCard2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/videos_card2_title" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3Content1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="#FFE1E1"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/card2Content1"
            app:layout_constraintStart_toStartOf="@id/verticalConstraint1"
            app:layout_constraintEnd_toStartOf="@id/verticalConstraint2"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/video_three"
                        android:contentDescription="@string/cd_video_thumb_3"/>

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:src="@drawable/youtube"
                        android:contentDescription="@string/cd_video_play"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/textCard3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/videos_card3_title" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>